--- a/src/pages/_sites.astro
+++ b/src/pages/_sites.astro
@@ -1,8 +1,12 @@
 ---
+// Imports
 import '../styles/list.scss'
 
 import Layout from '../layouts/Layout.astro'
+
 ---
+
+<!-- Sites Page -->
 <Layout title="Sites">
     <section class="list v">
         <!-- <div>
