--- a/src/pages/_soon.astro
+++ b/src/pages/_soon.astro
@@ -1,8 +1,12 @@
 ---
+// Imports
 import '../styles/pages/soon.scss'
 
 import Layout from '../layouts/Layout.astro'
+
 ---
+
+<!-- Coming Soon Page -->
 <Layout title="Coming Soon" classItems="isSoon">
     <p>This site is under development right now, I will put something here soon!</p>
     <p>In the meantime, you can email me at: <a href="mailto:adarshrkumar+site@aol.com">adarshrkumar+site@aol.com</a>.</p>
