--- a/src/styles/components/fullAreaIframe.scss
+++ b/src/styles/components/fullAreaIframe.scss
@@ -1,4 +1,6 @@
+// Full area iframe styling
 .page-area > iframe {
+    // Remove border radius for seamless integration
     border-top-left-radius: 0;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
