--- a/src/styles/pages/projects.scss
+++ b/src/styles/pages/projects.scss
@@ -1,19 +1,22 @@
+// Projects page styling
 .main-content {
     display: flex;
     flex-direction: column;
+    
+    // Gap for non-post content
     &:not(.post) {
         gap: var(--pad);
     }
 }
 
+// Category styling
 .category {
     &__title {
         text-align: center;
     }
 }
 
-
-
+// Commented out legacy styles
 // .grid {
 //     margin: var(--gap);
 // }
