--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -1,5 +1,6 @@
 // Hero section styles
 .hero {
+    // Center all direct children
     & > * {
         width: fit-content;
         margin-inline: auto;
