--- a/src/styles/components/largeFrame.scss
+++ b/src/styles/components/largeFrame.scss
@@ -1,83 +1,84 @@
+// Large frame component variables
 $t-time: 0.5s;
 
+// Large frame styling
 .large-frame {
+    // Layout properties
     position: relative;
-
-    $ar: 2;
     box-sizing: border-box;
-
     max-width: 100%;
-    aspect-ratio: var(--ar, $ar);
+    aspect-ratio: var(--ar, 2);
 
+    // Background properties
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
 
+    // Visual properties
     border: solid 1px var(--color);
     border-radius: 1rem;
-
     overflow: hidden;
     overflow: clip;
-
     isolation: isolate;
 
+    // Child element positioning
     > *, &::before, &::after {
         position: absolute;
         inset: 0;
         margin: auto;
     }
 
+    // Checkbox styling
     .checker {
         appearance: none;
-        // visibility: hidden;
     }
+    
+    // Interactive states
     &:has(.checker:not(:checked)) {
         cursor: pointer;
     }
+    
     &:has(.checker:checked) {
         pointer-events: none;
     }
+    
+    // Frame visibility control
     .checker:checked ~ :not(.checker):not(.frame), &:has(.checker:checked) {
         &::before, &::after {
             display: none;
         }
     }
+    
     .checker:not(:checked) ~ .frame {
         display: none;
     }
 
+    // Image styling
     .img {
         display: block;
         width: 100%;
-
         background-image: var(--bg);
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-
         z-index: 1;
     }
 
+    // Info overlay
     .info {
         padding: 1rem;
-
         width: 100%;
         height: 100%;
-
         background-color: hsla(0, 0%, var(--bg-lightness), 0.75);
-
         opacity: 0;
-
         user-select: none;
-
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
-
         transition: opacity $t-time;
-
         z-index: 2;
 
+        // Text styling
         > * {
             margin-block: 0;
             white-space: nowrap;
@@ -89,26 +90,22 @@ $t-time: 0.5s;
         }
     }
 
+    // Frame content
     .frame {
         box-sizing: inherit;
-    
         max-width: unset;
         aspect-ratio: unset;
-    
         background-color: #000000;
-
         background-position: unset;
         background-repeat: unset;
         background-size: unset;
-    
         border: none;
         border-radius: 0;
-
         pointer-events: all;
-
         z-index: 4;
     }
 
+    // Hover effects
     &:hover {
         .info {
             opacity: 1;
@@ -118,21 +115,20 @@ $t-time: 0.5s;
         }
     }
 
+    // Play button pseudo-elements
     &::before, &::after {
         content: '';
-
         height: 25%;
         aspect-ratio: 1;
-
         clip-path: polygon(10% 0, 90% 50%, 10% 100%);
-
         z-index: 3;
     }
 
+    // Play button styling
     &::before {
         background-color: darkred;
-
     }
+    
     &::after {
         opacity: 0;
         background-color: hsla(0, 0%, var(--color-lightness), 1);
