--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -100,13 +100,29 @@ const keywords = keywordsArray.join(', ')
         <meta name="keywords" content={keywords} />
         {author ? <meta name="author" content={author} /> : ''}
         <title>{title}</title>
+        
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content={Astro.url} />
+        <meta property="og:title" content={finalTitle} />
+        <meta property="og:description" content={aboutContent} />
+        <meta property="og:image" content={`${Astro.site}${siteConfig.logo}`} />
+        <meta property="og:site_name" content={siteConfig.name} />
+        
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content={Astro.url} />
+        <meta property="twitter:title" content={finalTitle} />
+        <meta property="twitter:description" content={aboutContent} />
+        <meta property="twitter:image" content={`${Astro.site}${siteConfig.logo}`} />
         <!-- <base href={Astro.site} /> -->
         <link rel="icon" href="/assets/favicon.png" />
         <link rel="preload" as="image" href="/assets/placeholder.svg" />
-        <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=625cc7f8cb9e7d001955b4a3&product=sop' async='async'></script>
+        {pageType === 'post' && <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=625cc7f8cb9e7d001955b4a3&product=sop' async='async'></script>}
         <Script name="settings" />
     </head>
     <body>
+        <a href="#content" class="skip-link">Skip to main content</a>
         <Header logo={siteConfig.logo} />
         <div class="wrapper">
             <main class="content" id="content">
